# text_search_gas_news

./: README.md  notebook.ipynb  pyproject.toml  task.ipynb
data/experiment/: base_vs_pavlov_vs_robert.txt  different_distance.txt
data/interim/: df_text.csv
data/processed/: date_df.csv  df_features.csv  ruBert-base.csv  ruRoberta-large.csv  rubert-base-cased.csv
data/work_model/: date_df.csv  df_norm_names.csv  emb.csv  matrix.csv
