[tool.poetry]
name = "mlposproj"
version = "0.1.0"
description = ""
authors = ["vectorRNspace"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
flake8 = "^6.0.0"
scikit-learn = "^1.2.2"
dvc = {extras = ["s3"], version = "^2.10.2"}
lemmagen3 = "^3.5.0"
pandas = "^2.0.1"
torch = "2.0.0"
torchvision = "^0.15.1"
notebook = "^6.5.4"
setuptools = "^67.7.2"
pysrt = "^1.1.2"
slovnet = "^0.6.0"
natasha = "^1.5.0"
transformers = "^4.30.2"
sklearn = "^0.0.post5"
plotly = "^5.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "python setup.py install"
